# VTKCropTool

./: CMakeLists.txt  README.md  main.cpp
core/: FileManager.cpp  FileManager.h
tools/: SplineCropTool.cpp  SplineCropTool.h  VtkMarkerHandler.cpp  VtkMarkerHandler.h  VtkSnapDragInteractor.cpp  VtkSnapDragInteractor.h  VtkSplineHandler.cpp  VtkSplineHandler.h
tools/components/: Marker.cpp  Marker.h  Spline.cpp  Spline.h
ui/: MainWindow.cpp  MainWindow.h  VTKWidget.cpp  VTKWidget.h
ui/components/: Toolbar.cpp  Toolbar.h  Toolbox.cpp  Toolbox.h
ui/components/tools/: CropTool.cpp  CropTool.h
